--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,17 @@
 </head>
 <body>
     <nav class="navbar navbar-dark">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <i class="fas fa-chart-line"></i>
+                <i class="fas fa-chart-line me-2"></i>
                 SEO Tracker
             </a>
+            <div class="d-flex">
+                <a href="{{ url_for('logout') }}" class="btn btn-outline-light btn-sm">
+                    <i class="fas fa-sign-out-alt me-1"></i>
+                    Déconnexion
+                </a>
+            </div>
         </div>
     </nav>
 
